--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -10,7 +10,7 @@
             <div>
               <p class="mb-2">
                 <fa-icon class="mr-2 text-primary" [icon]="faLocation"></fa-icon>
-                PET Tours Jumelles, face boulangerie sacker, Douala, Cameroun
+                PK10, Tours Jumelles, face boulangerie sacker, Douala, Cameroun
               </p>
               <p class="mb-2">
                 <fa-icon class="mr-2 text-primary" [icon]="faEmail"></fa-icon> 
