--- a/src/app/components/digital-payment-solution/digital-payment-solution.component.html
+++ b/src/app/components/digital-payment-solution/digital-payment-solution.component.html
@@ -34,11 +34,11 @@
       <p class="items-start w-full mt-4 text-lg text-gray-600 text-start">
         Avec <strong>NGOMBE SARL</strong> ouvrez la porte à de nouvelle opportunités  et faites passer votre entreprise au niveau superieur.
       </p>
-      <button class="px-6 py-4 text-white rounded-full shadow-md bg-sky-500 hover:bg-sky-600 slide-up"
+      <a aria-details="contact us anchor" href="#contact" target="_blank" class="px-6 py-4 text-white rounded-full shadow-md bg-sky-500 hover:bg-sky-600 slide-up"
               appAnimateOnScroll animationClass="slide-up"
               [delay]="700">
         Commencez dès maintenant
-      </button>
+    </a>
     </div>
 
     <div class="flex flex-col items-start space-y-4 lg:w-1/2 slide-left"
