--- a/src/app/components/sirh-ngombe/sirh-ngombe.component.html
+++ b/src/app/components/sirh-ngombe/sirh-ngombe.component.html
@@ -7,7 +7,7 @@
        appAnimateOnScroll animationClass="slide-up"
        [delay]="200">Découvrez notre solution complète</p>
 
-    <div class="flex flex-col gap-8 p-6 bg-white lg:p-0 lg:flex-row">
+    <div class="flex flex-col gap-8 p-6 mt-10 bg-white xs:mt-2 lg:p-0 lg:flex-row">
         <div class="flex flex-col space-y-6 lg:w-1/2 slide-left"
              appAnimateOnScroll animationClass="slide-left"
              [delay]="300">
