--- a/src/app/components/features/features.component.html
+++ b/src/app/components/features/features.component.html
@@ -25,11 +25,16 @@
             <li class="flex items-center gap-3 fade-in"
                 appAnimateOnScroll animationClass="fade-in"
                 [delay]="600 + (feature.id * 100)">
-                <span class="flex items-center justify-center w-12 h-12 bg-white rounded-full shadow-lg zoom-in-item"
+                <!-- <span class="flex items-center justify-center w-16 h-16 text-xl bg-white rounded-full shadow-lg zoom-in-item"
                       appAnimateOnScroll animationClass="zoom-in-item"
                       [delay]="700 + (feature.id * 100)">
-                  <img [src]="feature.img" [alt]="feature.alt" class="w-6 h-auto" />
-                </span>
+                </span> -->
+                <img  appAnimateOnScroll animationClass="zoom-in-item"
+                      [delay]="700 + (feature.id * 100)"
+                      [src]="feature.img" 
+                      [alt]="feature.alt" 
+                      class="w-16 h-16" 
+                />
                 <span class="font-bold">{{feature.title}}</span>
             </li>
         }
@@ -37,10 +42,13 @@
     </div>
   </div>
 
-  <button class="px-6 py-2 text-white rounded-full shadow-md bg-sky-500 hover:bg-sky-600 slide-up"
+  <a [href]="onpousseUrl" target="_blank" class="px-6 py-2 text-white rounded-full shadow-md bg-sky-500 hover:bg-sky-600 slide-up"
           appAnimateOnScroll animationClass="slide-up"
           [delay]="800">
-    Accéder au service
-  </button>
+          Accéder au service
+
+      <!-- <a  >
+      </a> -->
+    </a>
 
 </div>
