--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -27,31 +27,31 @@
                appAnimateOnScroll animationClass="zoom-in"
                [delay]="700"/>
 
-          <div class="feature-tag absolute top-[15%] right-0 bg-white shadow-lg rounded-md px-4 py-2 flex items-center gap-2 fade-in-item"
+          <div class="feature-tag absolute top-[15%] right-0 md:right-8 bg-white shadow-lg rounded-md px-4 py-4 flex items-center gap-2 fade-in-item"
                appAnimateOnScroll animationClass="fade-in-item"
                [delay]="800">
-            <fa-icon [icon]="faProcessus" class="w-6 h-6 text-primary" ></fa-icon>
+            <img src="icons/stats.svg" class="w-12 h-12" />
             <span class="text-sm font-medium">PROCESSUS</span>
           </div>
 
-          <div class="feature-tag absolute top-[35%] left-0 bg-white shadow-lg rounded-md px-4 py-2 flex items-center gap-2 fade-in-item"
+          <div class="feature-tag absolute top-[35%] left-0 bg-white shadow-lg rounded-md px-4 py-4 flex items-center gap-2 fade-in-item"
                appAnimateOnScroll animationClass="fade-in-item"
                [delay]="900">
-            <img src="feature-tag assets/icons/engineering.svg" class="w-6 h-6" />
+            <img src="icons/check.svg" class="w-6 h-6" />
             <span class="text-sm font-medium">INGÉNIERIE</span>
           </div>
 
-          <div class="feature-tag absolute bottom-[20%] left-0 bg-white shadow-lg rounded-md px-4 py-2 flex items-center gap-2 fade-in-item"
+          <div class="feature-tag absolute bottom-[20%] left-0 bg-white shadow-lg rounded-md px-4 py-4 flex items-center gap-2 fade-in-item"
                appAnimateOnScroll animationClass="fade-in-item"
                [delay]="1000">
-            <img src="assets/icons/sirh.svg" class="w-6 h-6" />
+            <img src="icons/calendar.svg" class="w-6 h-6" />
             <span class="text-sm font-medium">SIRH NGOMBE</span>
           </div>
 
-          <div class="feature-tag absolute bottom-[30%] right-0 bg-white shadow-lg rounded-md px-4 py-2 flex items-center gap-2 fade-in-item"
+          <div class="feature-tag absolute bottom-[30%] right-0 bg-white shadow-lg rounded-md px-4 py-4 flex items-center gap-2 fade-in-item"
                appAnimateOnScroll animationClass="fade-in-item"
                [delay]="1100">
-            <img src="assets/icons/solution.svg" class="w-6 h-6" />
+            <img src="icons/mail.svg" class="w-6 h-6" />
             <span class="text-sm font-medium">SOLUTION DIGITALE</span>
           </div>
         </div>
