icons updated from svg to fontawesome icons, image updates, header highlight added

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<section class="relative about-contact fade-in"
+<section id="about-us" class="relative about-contact fade-in"
          appAnimateOnScroll animationClass="fade-in">
 <div class="flex flex-col w-full" id="about-us">
     <h2 class="mb-12 text-3xl font-bold text-center text-primary slide-down"
@@ -63,7 +63,7 @@
       </div>
 
 </div>
-<div class="relative lg:top-[-30px]" id="contact">
+<div id="contact" class="relative lg:top-[-30px]">
   <app-contact></app-contact>
 </div>
 
