--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div id="contact" class="flex flex-col text-white md:flex-row bg-primary">
+  <div class="flex flex-col text-white md:flex-row bg-primary">
     <div class="relative z-10 w-full md:w-1/2 md:h-full">
         <div class="absolute inset-0 flex flex-col items-start justify-center w-full h-full px-8 bg-gradient-to-br from-black/70 via-black/50 to-black/80 z-5">
             <h2 class="mb-4 text-4xl font-bold text-primary">Contactez-nous</h2>
