--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,7 +1,3 @@
-<!-- <div id="home">
-    <app-home></app-home>
-</div> -->
-
 <div id="home">
     <app-hero></app-hero>
 </div>
@@ -20,6 +16,6 @@
 <div id="partners">
     <app-partners></app-partners>
 </div>
-<div>
+<div id="about-us">
     <app-about-us></app-about-us>
 </div>
