dealing with text alignments, and header highlight correction for contact-us

--- a/src/app/components/digital-payment-solution/digital-payment-solution.component.html
+++ b/src/app/components/digital-payment-solution/digital-payment-solution.component.html
@@ -1,7 +1,7 @@
 <section id="digital-payment" class="py-20 fade-in"
          appAnimateOnScroll animationClass="fade-in">
     <div class="container px-6 mx-auto text-center lg:px-20">
-      <h2 class="text-4xl font-bold uppercase text-primary slide-down"
+      <h2 class="text-3xl font-bold uppercase xs:text-4xl text-primary slide-down"
           appAnimateOnScroll animationClass="slide-down"
           [delay]="100">Propriétaire et Fournisseur de solution de paiement digitaux</h2>
       <p class="mt-4 text-lg text-gray-600 slide-up"
@@ -37,7 +37,7 @@
       <a aria-details="contact us anchor" href="#contact" target="_blank" class="px-6 py-4 text-white rounded-full shadow-md bg-sky-500 hover:bg-sky-600 slide-up"
               appAnimateOnScroll animationClass="slide-up"
               [delay]="700">
-        Commencez dès maintenant
+        Commencez
     </a>
     </div>
 
