--- a/src/app/components/features/features.component.html
+++ b/src/app/components/features/features.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col items-center justify-center py-10 md:px-20 fade-in"
      appAnimateOnScroll animationClass="fade-in">
-    <h2 class="text-4xl font-bold uppercase text-primary slide-down"
+    <h2 class="text-3xl font-bold text-center uppercase xs:text-4xl text-primary slide-down"
         appAnimateOnScroll animationClass="slide-down"
         [delay]="100">Autres fonctionnalités</h2>
     <div class="flex flex-col items-center justify-center w-full gap-8 p-6 bg-white lg:flex-row">
