--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -19,3 +19,6 @@
 <div id="about-us">
     <app-about-us></app-about-us>
 </div>
+<div class="relative lg:top-[-30px]">
+    <app-contact></app-contact>
+  </div>
