--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="flex flex-col text-white md:flex-row bg-primary">
-    <div class="relative z-10 w-full md:w-1/2 md:h-full">
+    <div class="relative z-10 w-full min-h-[400px] md:w-1/2 md:h-full">
         <div class="absolute inset-0 flex flex-col items-start justify-center w-full h-full px-8 bg-gradient-to-br from-black/70 via-black/50 to-black/80 z-5">
             <h2 class="mb-4 text-4xl font-bold text-primary">Contactez-nous</h2>
             <p class="flex flex-col mb-2 text-white">                
@@ -29,7 +29,7 @@
         <img 
             src="images/person-office-work-day.jpg" 
             alt="Contact Person" 
-            class="static inset-0 z-[-2]"
+            class="static inset-0 min-h-[400px] object-cover z-[-2]"
         >
     </div>
     <div class="w-full p-2 md:p-10 md:w-1/2 md:h-full">
