--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -22,7 +22,7 @@
     appAnimateOnScroll animationClass="fade-in">
     <div class="container mx-auto md:px-6">
       <h2 
-        class="mb-12 text-3xl font-bold text-start text-primary slide-down"
+        class="mb-12 text-3xl font-bold text-center md:text-start text-primary slide-down"
         appAnimateOnScroll animationClass="slide-down"
         [delay]="100">Nos Services
       </h2>
