--- a/src/app/components/sirh-ngombe/sirh-ngombe.component.html
+++ b/src/app/components/sirh-ngombe/sirh-ngombe.component.html
@@ -19,10 +19,10 @@
                 <div class="absolute -right-2 -bottom-3 z-[-1]  w-[231px] h-[231px] rounded-md bg-primary"></div>
                 <div class="absolute -left-8 top-1/2 rounded-full  w-[20px] h-[20px] bg-primary"></div>
             </div>
-            <div class="flex flex-col gap-5 my-4 max-w-[85%] fade-in"
+               <div class="flex flex-col gap-5 my-4 text-center sm:text-start sm:max-w-[85%] fade-in"
                  appAnimateOnScroll animationClass="fade-in"
                  [delay]="500">
-                <p class="font-bold text-gray-800 blok">
+                    <p class="font-bold text-gray-800 blok">
                     Avec le SIRH NGOMBE, bénéficiez d'une solution avancée pour améliorer la gestion et
                     l'optimisation de vos métiers RH
                   </p>
