feature: updated the services-products , added lamainservices informations

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -9,6 +9,7 @@
     <app-sirh-ngombe></app-sirh-ngombe>
     <app-features></app-features>
     <app-digital-payment-solution></app-digital-payment-solution>
+    <app-lamain-service></app-lamain-service>
 </div>
 <div id="services">
     <app-our-services></app-our-services>
