--- a/src/app/components/lamain-service/lamain-service.component.html
+++ b/src/app/components/lamain-service/lamain-service.component.html
@@ -1,4 +1,4 @@
-<section class="relative py-16 overflow-hidden bg-gray-100 md:py-24" aria-labelledby="lamain-service-heading">
+<section class="relative py-16 my-4 overflow-hidden bg-gray-100 md:py-24" aria-labelledby="lamain-service-heading">
     <div class="container px-4 mx-auto sm:px-6 lg:px-8">
       <div class="grid items-center grid-cols-1 gap-12 lg:grid-cols-2">
   
@@ -35,6 +35,7 @@
               class="text-4xl font-extrabold leading-tight text-gray-900 sm:text-5xl fade-in"
               appAnimateOnScroll animationClass="fade-in"
               [delay]="600">
+            <img src="logos/lamain-bg.png" class="w-32 h-fit" alt="lamain service logo">
             <span class="block text-orange-600 drop-shadow-md">LAMAIN</span>
             <span class="block text-primary-800 drop-shadow-md">SERVICE</span>
           </h2>
